# robot_movement

./: README.md
install/: local_setup.sh  setup.sh
install/movement_info/include/movement_info/: movement.hpp  movement_interface.hpp
install/movement_info/lib/movement_info/: movement
install/movement_info/share/ament_index/resource_index/package_run_dependencies/: movement_info
install/movement_info/share/ament_index/resource_index/parent_prefix_path/: movement_info
install/movement_info/share/movement_info/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/movement_info/share/movement_info/cmake/: movement_infoConfig.cmake
install/movement_info/share/movement_info/config/: params.yaml
install/movement_info_msgs/include/movement_info_msgs/movement_info_msgs/msg/: movement_info.h  rosidl_generator_c__visibility_control.h  (+2 more)
install/movement_info_msgs/share/movement_info_msgs/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/movement_info_msgs/share/movement_info_msgs/cmake/: ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_movement_info_msgs__rosidl_generator_cExport.cmake  export_movement_info_msgs__rosidl_generator_pyExport-noconfig.cmake  export_movement_info_msgs__rosidl_typesupport_fastrtps_cExport.cmake  movement_info_msgs__rosidl_typesupport_cExport-noconfig.cmake  movement_info_msgs__rosidl_typesupport_introspection_cExport-noconfig.cmake  movement_info_msgs__rosidl_typesupport_introspection_cExport.cmake
log/: latest_build  latest_test  latest_test-result
src/movement_info/: CMakeLists.txt  package.xml
src/movement_info/config/: params.yaml
src/movement_info/include/movement_info/: MockPublisher.hpp  movement.hpp  movement_interface.hpp
src/movement_info/src/: main.cpp  movement.cpp  movement_interface.cpp
src/movement_info/test/: movement_test.cpp
src/movement_info/test/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/movement_info/test/log/: latest_build
src/movement_info_msgs/: CMakeLists.txt  package.xml
(+12 files in other folders)
